Tankkauslista sivu lisätty

--- a/MauiTankkausApp/MauiTankkausApp.csproj
+++ b/MauiTankkausApp/MauiTankkausApp.csproj
@@ -67,4 +67,16 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="TankkkauksetPage.xaml.cs">
+	    <DependentUpon>TankkkauksetPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="TankkkauksetPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
