--- a/MauiTankkausApp/MauiTankkausApp.csproj
+++ b/MauiTankkausApp/MauiTankkausApp.csproj
@@ -74,6 +74,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="EditTankkauksetPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="TankkkauksetPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
