--- a/MauiTankkausApp/MauiTankkausApp.csproj
+++ b/MauiTankkausApp/MauiTankkausApp.csproj
@@ -77,6 +77,12 @@
 	  <MauiXaml Update="EditTankkauksetPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="LisaaRekisteriNroPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="LisaaTankkausPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="TankkkauksetPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
